--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,22 +1,26 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Giile Pro - Home{% endblock %}
+{% block title %}{{ settings.site_title }} - Home{% endblock %}
 
 {% block content %}
 <section class="hero">
     <div class="container">
         <div class="hero-content">
             <div class="hero-text">
-                <h1 class="mdc-typography--headline2">Welcome to Giile Pro</h1>
-                <p class="mdc-typography--body1">Your premier entertainment management platform</p>
-                <a href="/accounts/signup/" class="mdc-button mdc-button--raised">
+                <h1 class="mdc-typography--headline2">{{ home.hero_title }}</h1>
+                <p class="mdc-typography--body1">{{ home.hero_subtitle }}</p>
+                <a href="{{ home.hero_button_url }}" class="mdc-button mdc-button--raised" style="margin-bottom: 3rem;">
                     <span class="mdc-button__ripple"></span>
-                    <span class="mdc-button__label">Get Started</span>
+                    <span class="mdc-button__label">{{ home.hero_button_text }}</span>
                 </a>
             </div>
             <div class="hero-image">
-                <img src="{% static 'images/hero-image.jpg' %}" alt="Giile Pro" class="mdc-image-list__image">
+                {% if home.hero_image %}
+                    <img src="{{ home.hero_image.url }}" alt="{{ home.hero_title }}" class="mdc-image-list__image">
+                {% else %}
+                    <img src="{% static 'images/hero-image.jpg' %}" alt="{{ home.hero_title }}" class="mdc-image-list__image">
+                {% endif %}
             </div>
         </div>
     </div>
@@ -24,9 +28,31 @@
 
 <section class="services">
     <div class="container">
-        <h2 class="mdc-typography--headline3 section-title">Our Services</h2>
+        <h2 class="mdc-typography--headline3 section-title">{{ home.services_title }}</h2>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
+                {% for service in home.services.all %}
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
+                    <div class="mdc-card service-card">
+                        <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('{% if service.image %}{{ service.image.url }}{% else %}{% static 'images/service-placeholder.jpg' %}{% endif %}');">
+                            <div class="mdc-card__media-content"></div>
+                        </div>
+                        <div class="mdc-card__content">
+                            <h5 class="mdc-typography--headline5">{{ service.title }}</h5>
+                            <p class="mdc-typography--body2">{{ service.description }}</p>
+                        </div>
+                        <div class="mdc-card__actions">
+                            <div class="mdc-card__action-buttons">
+                                <a href="{{ service.button_url }}" class="mdc-button mdc-card__action mdc-card__action--button">
+                                    <span class="mdc-button__ripple"></span>
+                                    <span class="mdc-button__label">{{ service.button_text }}</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% empty %}
+                <!-- Default services if none are created yet -->
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
                     <div class="mdc-card service-card">
                         <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('{% static 'images/talent.jpg' %}');">
@@ -46,44 +72,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
-                    <div class="mdc-card service-card">
-                        <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('{% static 'images/music.jpg' %}');">
-                            <div class="mdc-card__media-content"></div>
-                        </div>
-                        <div class="mdc-card__content">
-                            <h5 class="mdc-typography--headline5">Music Production</h5>
-                            <p class="mdc-typography--body2">Our record label produces and distributes quality music across genres.</p>
-                        </div>
-                        <div class="mdc-card__actions">
-                            <div class="mdc-card__action-buttons">
-                                <a href="/music/" class="mdc-button mdc-card__action mdc-card__action--button">
-                                    <span class="mdc-button__ripple"></span>
-                                    <span class="mdc-button__label">Explore Music</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
-                    <div class="mdc-card service-card">
-                        <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('{% static 'images/movies.jpg' %}');">
-                            <div class="mdc-card__media-content"></div>
-                        </div>
-                        <div class="mdc-card__content">
-                            <h5 class="mdc-typography--headline5">Movie Production</h5>
-                            <p class="mdc-typography--body2">We create compelling films and video content for various platforms.</p>
-                        </div>
-                        <div class="mdc-card__actions">
-                            <div class="mdc-card__action-buttons">
-                                <a href="/movies/" class="mdc-button mdc-card__action mdc-card__action--button">
-                                    <span class="mdc-button__ripple"></span>
-                                    <span class="mdc-button__label">Explore Movies</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Add more default services here -->
+                {% endfor %}
             </div>
         </div>
     </div>
@@ -91,145 +81,100 @@
 
 <section class="events">
     <div class="container">
-        <h2 class="mdc-typography--headline3 section-title">Upcoming Events</h2>
+        <h2 class="mdc-typography--headline3 section-title">{{ home.events_title }}</h2>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
+                {% for event in home.events.all %}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-phone">
                     <div class="mdc-card event-card" style="padding: 20px;">
                         <div class="mdc-card__content">
-                            <h5 class="mdc-typography--headline5">Summer Music Festival</h5>
+                            <h5 class="mdc-typography--headline5">{{ event.title }}</h5>
                             <div class="event-details">
                                 <div class="event-detail">
                                     <i class="material-icons">event</i>
-                                    <span class="mdc-typography--body2">July 15-17, 2023</span>
+                                    <span class="mdc-typography--body2">{{ event.date }}</span>
                                 </div>
                                 <div class="event-detail">
                                     <i class="material-icons">location_on</i>
-                                    <span class="mdc-typography--body2">Central Park, New York</span>
+                                    <span class="mdc-typography--body2">{{ event.location }}</span>
                                 </div>
                             </div>
                         </div>
                         <div class="mdc-card__actions">
                             <div class="mdc-card__action-buttons">
-                                <a href="/events/summer-music-festival/" class="mdc-button mdc-button--raised mdc-card__action mdc-card__action--button">
+                                <a href="{{ event.button_url }}" class="mdc-button mdc-button--raised mdc-card__action mdc-card__action--button">
                                     <span class="mdc-button__ripple"></span>
-                                    <span class="mdc-button__label">Get Tickets</span>
+                                    <span class="mdc-button__label">{{ event.button_text }}</span>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-phone">
-                    <div class="mdc-card event-card" style="padding: 20px;">
-                        <div class="mdc-card__content">
-                            <h5 class="mdc-typography--headline5">Movie Premiere: "The Last Chapter"</h5>
-                            <div class="event-details">
-                                <div class="event-detail">
-                                    <i class="material-icons">event</i>
-                                    <span class="mdc-typography--body2">August 5, 2023</span>
-                                </div>
-                                <div class="event-detail">
-                                    <i class="material-icons">location_on</i>
-                                    <span class="mdc-typography--body2">Regal Cinema, Los Angeles</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mdc-card__actions">
-                            <div class="mdc-card__action-buttons">
-                                <a href="/events/the-last-chapter-premiere/" class="mdc-button mdc-button--raised mdc-card__action mdc-card__action--button">
-                                    <span class="mdc-button__ripple"></span>
-                                    <span class="mdc-button__label">Get Tickets</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% empty %}
+                <!-- Default events if none are created yet -->
+                {% endfor %}
             </div>
         </div>
         <div class="view-all-link">
-            <a href="/events/" class="mdc-button">
+            <a href="{{ home.events_button_url }}" class="mdc-button">
                 <span class="mdc-button__ripple"></span>
-                <span class="mdc-button__label">View All Events</span>
+                <span class="mdc-button__label">{{ home.events_button_text }}</span>
                 <i class="material-icons mdc-button__icon" aria-hidden="true">arrow_forward</i>
             </a>
         </div>
     </div>
 </section>
 
-<section class="blog">
-    <div class="container">
-        <h2 class="mdc-typography--headline3 section-title">Latest News</h2>
-        <div class="mdc-layout-grid">
-            <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
-                    <div class="mdc-card blog-card">
-                        <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('{% static 'images/blog1.jpg' %}');">
-                            <div class="mdc-card__media-content"></div>
-                        </div>
-                        <div class="mdc-card__content">
-                            <h5 class="mdc-typography--headline5">New Artist Signing</h5>
-                            <p class="mdc-typography--body2">We're excited to announce the signing of rising star Jane Doe to our talent roster.</p>
-                            <p class="mdc-typography--caption">June 1, 2023</p>
-                        </div>
-                        <div class="mdc-card__actions">
-                            <div class="mdc-card__action-buttons">
-                                <a href="/blog/new-artist-signing/" class="mdc-button mdc-card__action mdc-card__action--button">
-                                    <span class="mdc-button__ripple"></span>
+<section class="blog section-margin section-padding">
+    <!-- Blog Section -->
+    <section class="blog-section section-padding">
+        <div class="container">
+            <h2 class="mdc-typography--headline3 section-title">{{ home.blog_title }}</h2>
+            
+            <div class="mdc-layout-grid">
+                <div class="mdc-layout-grid__inner">
+                    {% for post in latest_posts %}
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
+                        <div class="mdc-card blog-card">
+                            {% if post.featured_image %}
+                            <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('{{ post.featured_image.url }}');">
+                                <div class="mdc-card__media-content"></div>
+                            </div>
+                            {% endif %}
+                            <div class="mdc-card__content">
+                                <span class="post-date mdc-typography--caption">{{ post.formatted_date }}</span>
+                                <h3 class="mdc-typography--headline6 post-title">
+                                    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                                </h3>
+                                <div class="post-excerpt mdc-typography--body2">
+                                    {{ post.excerpt|truncatewords:20 }}
+                                </div>
+                            </div>
+                            <div class="mdc-card__actions">
+                                <a href="{{ post.get_absolute_url }}" class="mdc-button">
                                     <span class="mdc-button__label">Read More</span>
+                                    <i class="material-icons mdc-button__icon" aria-hidden="true">arrow_forward</i>
                                 </a>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
-                    <div class="mdc-card blog-card">
-                        <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('{% static 'images/blog2.jpg' %}');">
-                            <div class="mdc-card__media-content"></div>
-                        </div>
-                        <div class="mdc-card__content">
-                            <h5 class="mdc-typography--headline5">Album Release</h5>
-                            <p class="mdc-typography--body2">John Smith's new album "Horizons" is now available on all streaming platforms.</p>
-                            <p class="mdc-typography--caption">May 15, 2023</p>
-                        </div>
-                        <div class="mdc-card__actions">
-                            <div class="mdc-card__action-buttons">
-                                <a href="/blog/album-release-horizons/" class="mdc-button mdc-card__action mdc-card__action--button">
-                                    <span class="mdc-button__ripple"></span>
-                                    <span class="mdc-button__label">Read More</span>
-                                </a>
-                            </div>
-                        </div>
+                    {% empty %}
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+                        <p class="mdc-typography--body1 text-center">No blog posts available.</p>
                     </div>
-                </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-phone">
-                    <div class="mdc-card blog-card">
-                        <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('{% static 'images/blog3.jpg' %}');">
-                            <div class="mdc-card__media-content"></div>
-                        </div>
-                        <div class="mdc-card__content">
-                            <h5 class="mdc-typography--headline5">Film Festival Awards</h5>
-                            <p class="mdc-typography--body2">Our production "Silent Echo" won Best Drama at the International Film Festival.</p>
-                            <p class="mdc-typography--caption">April 28, 2023</p>
-                        </div>
-                        <div class="mdc-card__actions">
-                            <div class="mdc-card__action-buttons">
-                                <a href="/blog/film-festival-awards/" class="mdc-button mdc-card__action mdc-card__action--button">
-                                    <span class="mdc-button__ripple"></span>
-                                    <span class="mdc-button__label">Read More</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
+            
+            {% if home.blog_button_text %}
+            <div class="text-center mt-4" style="margin-top: 3rem;">
+                <a href="{% url 'blog:post_list' %}" class="mdc-button mdc-button--raised">
+                    <span class="mdc-button__label">{{ home.blog_button_text }}</span>
+                </a>
+            </div>
+            {% endif %}
         </div>
-        <div class="view-all-link">
-            <a href="/blog/" class="mdc-button">
-                <span class="mdc-button__ripple"></span>
-                <span class="mdc-button__label">View All News</span>
-                <i class="material-icons mdc-button__icon" aria-hidden="true">arrow_forward</i>
-            </a>
-        </div>
-    </div>
+    </section>
+    
 </section>
 {% endblock %}
